       castles).
     * Added ruined cottage and ruined hill village
 * Language and i18n:
   * Updated translations: Dutch, Italian, Japanese, Korean,
     Portuguese (Brazil), Spanish, Vietnamese
 * User interface:
   * Converted some dialog boxes to GUI2
   * Campaign difficulty descriptions must use Pango markup now
 * WML engine:
   * Created tag [petrify] (bug #17077). Moved [unpetrify] to lua.
   * Introduced [recall]fire_event=yes|no (default no) parameter (fixes
     bug #17083).

Version 1.9.2:
 * Campaigns:
   * Descent into Darkness:
     * Made 'Alone at Last' easier.
   * Legend of Wesmere:
     * Map updates.
     * Implemented gold carryover between the multiplayer chapters.
     * Added extra keeps to keep up with the growing number of leaders.
     * Fixed scenario 04 not being playable.
     * Corrected the objectives of scenario 3.
     * Bug fix for the fleeing orcs in scenario 07.
   * Heir to the Throne:
     * Fixed a bug causing Warven in 'Cliffs of Thoria' not able to move through
       mountains.
   * Liberty:
     * New set of portraits.
     * Changed Relnan's character to a woman.
     * New (unanimated) sprites for the Rogue Mage unit line.
     * Various balancing changes to the Rogue Mage unit line.
   * Northern Rebirth:
     * Make it possible to choose whether a unit should pick up the
       Rod of Justice or not.
   * The Rise of Wesnoth:
     * New set of portraits, except for Jevyan and Rithrandil.
     * Gave Jevyan's familiar a custom unit type.
   * Sceptre of Fire:
     * Thursagan can now advance to Dwarvish Arcanister.
     * New (unanimated) sprites for the Dwarvish Miner.
   * Son of the Black Eye:
     * Changes to the objectives and gameplay of 'Clash of Armies'.
   * The South Guard:
     * New portrait for Mal M'Brin.
 * Editor:
   * Verbose terrain names can be specified using terrain.editor_name to
     be displayed in the editor as "<verbose name>/<common name> (<underlying>)"
     (bug #16450)
 * Graphics: