@@ -58,6 +58,7 @@ enum HOTKEY_COMMAND {
 	HOTKEY_REPLAY_NEXT_SIDE, HOTKEY_REPLAY_SHOW_EVERYTHING,
 	HOTKEY_REPLAY_SHOW_EACH, HOTKEY_REPLAY_SHOW_TEAM1,
 	HOTKEY_REPLAY_SKIP_ANIMATION,
+	HOTKEY_ANIMATE_MAP,
 
 	// Whiteboard commands
 	HOTKEY_WB_TOGGLE,
