@@ -16,6 +16,8 @@ Version 1.9.2+svn:
  * User interface:
    * Converted some dialog boxes to GUI2
    * Campaign difficulty descriptions must use Pango markup now
+   * Added a new hotkey sequence (by default unassigned) to toggle animated map mode
+     (feature #15976).
  * WML engine:
    * Created tag [petrify] (bug #17077). Moved [unpetrify] to lua.
    * Introduced [recall]fire_event=yes|no (default no) parameter (fixes
